env/code_53bf02f59d2c3/stderr.txt
  File "main.py", line 3
    arr = raw_input().split(,)
                            ^
SyntaxError: invalid syntax
